@@ -1,3 +1,6 @@
+8 April 2013: Wouter
+	- OSX wake listener implementation.
+
 27 March 2013: Wouter
 	- update makedist for new svn and new crosscompile environment.
 
